--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-secure-store": "^15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "^5.6.1",
