add config for using render api

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,13 @@ SUPABASE_ANON_KEY=<YOUR_ANON_KEY>
 # ==========================================
 # BACKEND API CONFIGURATION
 # ==========================================
-# For local development, this should point to your local backend server
-# Update with your computer's local IP address for mobile device testing
+# Preferred: public env var embedded into the app at build time
+# Set this to your deployed backend base URL (no trailing slash)
+# Example: https://minecomplyapi.onrender.com
+EXPO_PUBLIC_API_BASE_URL=
+
+# Fallback (used if EXPO_PUBLIC_API_BASE_URL is not set)
+# For local development, point to your local backend server/IP
 API_BASE_URL=http://localhost:3000
 
 # ==========================================
