--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@expo-google-fonts/lexend-deca": "^0.4.1",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.8",
@@ -20,22 +22,33 @@
     "expo-camera": "^17.0.8",
     "expo-constants": "^18.0.9",
     "expo-file-system": "~19.0.16",
-    "expo-font": "~14.0.8",
+    "expo-font": "~14.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-location": "^19.0.7",
     "expo-media-library": "^18.2.0",
+    "expo-router": "^6.0.12",
     "expo-secure-store": "^15.0.7",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "lucide-react-native": "^0.545.0",
+    "nativewind": "^4.2.1",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-safe-area-context": "^5.6.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "^4.16.0",
+    "react-native-svg": "^15.14.0",
     "react-native-url-polyfill": "^3.0.0",
-    "react-native-web": "^0.21.0"
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets-core": "^1.6.2",
+    "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
   },
