--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "^4.16.0",
+    "react-native-signature-canvas": "^5.0.1",
     "react-native-svg": "^15.14.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-vector-icons": "^10.3.0",
