--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "^4.16.0",
-    "react-native-svg": "^15.14.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.12.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
