--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/lexend-deca": "^0.4.1",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
@@ -21,6 +22,7 @@
     "expo": "54.0.13",
     "expo-camera": "^17.0.8",
     "expo-constants": "^18.0.9",
+    "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.16",
     "expo-font": "~14.0.9",
     "expo-image-picker": "~17.0.8",
