--- a/package.json
+++ b/package.json
@@ -47,14 +47,17 @@
     "react-native-signature-canvas": "^5.0.1",
     "react-native-svg": "^15.14.0",
     "react-native-url-polyfill": "^3.0.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets-core": "^1.6.2",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^3.4.18",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@types/react": "~19.1.0",
+    "@types/uuid": "^10.0.0",
     "typescript": "~5.9.2"
   },
   "private": true
