--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "expo-file-system": "~19.0.16",
     "expo-font": "~14.0.9",
     "expo-image-picker": "~17.0.8",
-    "expo-location": "^19.0.7",
+    "expo-location": "~19.0.7",
     "expo-media-library": "^18.2.0",
     "expo-router": "^6.0.12",
     "expo-secure-store": "^15.0.7",
@@ -39,6 +39,7 @@
     "react-dom": "^19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "^4.16.0",
