--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.16",
     "expo-font": "~14.0.9",
+    "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-location": "~19.0.7",
     "expo-media-library": "^18.2.0",
