--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
-    "@react-native-picker/picker": "^2.11.4",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.3.27",
     "@react-navigation/stack": "^7.6.2",
     "@supabase/supabase-js": "^2.58.0",
-    "expo": "54.0.13",
-    "expo-camera": "^17.0.8",
+    "expo": "^54.0.23",
+    "expo-camera": "~17.0.9",
     "expo-constants": "^18.0.9",
     "expo-document-picker": "~14.0.7",
     "expo-file-system": "^19.0.17",
@@ -31,7 +31,7 @@
     "expo-location": "~19.0.7",
     "expo-media-library": "^18.2.0",
     "expo-print": "~15.0.7",
-    "expo-router": "^6.0.12",
+    "expo-router": "~6.0.14",
     "expo-secure-store": "^15.0.7",
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -41,7 +41,7 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
     "react-dom": "^19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "^1.20.1",
     "react-native-modal-datetime-picker": "^18.0.0",
@@ -50,7 +50,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "^4.16.0",
     "react-native-signature-canvas": "^5.0.1",
-    "react-native-svg": "^15.14.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.3.0",
