--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets-core": "^1.6.2",
     "tailwindcss": "^3.4.18",
     "uuid": "^13.0.0",
