--- a/package.json
+++ b/package.json
@@ -15,27 +15,28 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-picker/picker": "2.11.1",
-    "@react-navigation/bottom-tabs": "^7.4.8",
-    "@react-navigation/native": "^7.1.19",
-    "@react-navigation/native-stack": "^7.3.27",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native-stack": "^7.3.16",
     "@react-navigation/stack": "^7.6.2",
     "@supabase/supabase-js": "^2.58.0",
-    "expo": "^54.0.23",
-    "expo-camera": "~17.0.9",
+    "expo": "~54.0.27",
+    "expo-camera": "~17.0.10",
     "expo-constants": "^18.0.9",
-    "expo-document-picker": "~14.0.7",
+    "expo-document-picker": "~14.0.8",
     "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.9",
-    "expo-image-manipulator": "~14.0.7",
-    "expo-image-picker": "~17.0.8",
-    "expo-location": "~19.0.7",
-    "expo-media-library": "^18.2.0",
-    "expo-print": "~15.0.7",
-    "expo-router": "~6.0.14",
-    "expo-secure-store": "^15.0.7",
-    "expo-sharing": "~14.0.7",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
+    "expo-image-manipulator": "~14.0.8",
+    "expo-image-picker": "~17.0.9",
+    "expo-linking": "~8.0.10",
+    "expo-location": "~19.0.8",
+    "expo-media-library": "~18.2.1",
+    "expo-print": "~15.0.8",
+    "expo-router": "~6.0.17",
+    "expo-secure-store": "~15.0.8",
+    "expo-sharing": "~14.0.8",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.545.0",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
@@ -55,7 +56,8 @@
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "^13.16.0",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "^1.6.2",
     "tailwindcss": "^3.4.18",
     "uuid": "^13.0.0",
