--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "^1.6.2",
     "tailwindcss": "^3.4.18",
     "uuid": "^13.0.0",
