Improve APK discovery and upload in CI workflow
Enhanced the GitHub Actions workflow to search for APK files recursively and provide more detailed output on APK locations. Updated the artifact upload path to include all APKs in subdirectories and improved logging for easier debugging.

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -74,15 +74,22 @@ jobs:
             --max-workers=2 \
             --stacktrace
 
+      - name: Find APK files
+        run: |
+          echo "Searching for APK files..."
+          find android -name "*.apk" -type f || echo "No APK files found"
+          echo "Checking build outputs..."
+          ls -R android/app/build/outputs/ || echo "No build outputs directory"
+
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-release
-          path: android/app/build/outputs/apk/release/*.apk
+          path: android/app/build/outputs/apk/**/*.apk
           retention-days: 14
 
       - name: Print APK location
         run: |
           echo "✅ Build successful!"
           echo "APK files:"
-          ls -lh android/app/build/outputs/apk/release/
+          find android/app/build/outputs/apk -name "*.apk" -exec ls -lh {} \;
