--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -92,7 +92,7 @@ android {
         applicationId 'com.anonymous.minecomplyapp'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
+        versionCode 55000
         versionName "5.5.0"
 
         buildConfigField "String", "REACT_NATIVE_RELEASE_LEVEL", "\"${findProperty('reactNativeReleaseLevel') ?: 'stable'}\""
@@ -128,12 +128,13 @@ android {
     }
 
     // ✅ SPLITS - Build separate APKs per architecture to reduce memory
+    // universalApk = true ensures the APK works on ALL device architectures
     splits {
         abi {
             reset()
             enable true
-            universalApk false
-            include "arm64-v8a"
+            universalApk true  // Generate universal APK that works on all devices
+            include "arm64-v8a", "armeabi-v7a"  // Support both modern (64-bit) and older (32-bit) devices
         }
     }
     packagingOptions {
