--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -30,9 +30,9 @@ android.enablePngCrunchInReleaseBuilds=true
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
-# ✅ BUILD FOR MULTIPLE ARCHITECTURES for broader device compatibility
-# arm64-v8a (modern 64-bit) + armeabi-v7a (older 32-bit devices)
-reactNativeArchitectures=arm64-v8a,armeabi-v7a
+# ✅ BUILD ONLY ARM64 for release to reduce build time and memory usage
+# arm64-v8a covers 99%+ of modern Android devices
+reactNativeArchitectures=arm64-v8a
 
 # Use this property to enable support to the new architecture.
 # This will allow you to use TurboModules and the Fabric render in
@@ -88,8 +88,7 @@ org.gradle.jvmargs.encoding=UTF-8
 org.gradle.caching=true
 
 # ✅ CMAKE/NDK OPTIMIZATIONS - Minimize memory for C++ builds
-# Removed android.injected.build.abi to allow building for multiple architectures
-# The ABI filter is controlled by build.gradle splits configuration
+android.injected.build.abi=arm64-v8a
 android.cmake.parallelExecutionTasks=1
 
 # C++ Compiler flags - single thread to prevent memory issues
