--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -74,22 +74,15 @@ jobs:
             --max-workers=2 \
             --stacktrace
 
-      - name: Find APK files
-        run: |
-          echo "Searching for APK files..."
-          find android -name "*.apk" -type f || echo "No APK files found"
-          echo "Checking build outputs..."
-          ls -R android/app/build/outputs/ || echo "No build outputs directory"
-
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-release
-          path: android/app/build/outputs/apk/**/*.apk
+          path: android/app/build/outputs/apk/release/*.apk
           retention-days: 14
 
       - name: Print APK location
         run: |
           echo "✅ Build successful!"
           echo "APK files:"
-          find android/app/build/outputs/apk -name "*.apk" -exec ls -lh {} \;
+          ls -lh android/app/build/outputs/apk/release/
