Revert "Add debug logging to workflow"
This reverts commit a2c60a57fd2b007bce9156f03f11cab60a1204cf.

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -49,20 +49,13 @@ jobs:
           EXPO_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_cS_UnboE1HYaQhn9RSDLbA_zXOkNPjA
           EOF
 
-      - name: Verify gradle.properties
-        working-directory: android
-        run: |
-          echo "Checking gradle.properties..."
-          grep "newArchEnabled" gradle.properties || echo "newArchEnabled not found!"
-          grep "reactNativeArchitectures" gradle.properties || echo "reactNativeArchitectures not found!"
-
       - name: Make Gradlew executable
         working-directory: android
         run: chmod +x gradlew
 
       - name: Clean build
         working-directory: android
-        run: ./gradlew clean --stacktrace --info
+        run: ./gradlew clean
 
       - name: Build Release APK
         working-directory: android
