--- a/.gitignore
+++ b/.gitignore
@@ -38,13 +38,6 @@ yarn-error.*
 
 # generated native folders
 /ios
-# /android - COMMENTED OUT: We need android folder for builds
-
-# Android build artifacts (keep source, ignore builds)
-android/app/build/
-android/build/
-android/.gradle/
-android/.cxx/
-android/app/.cxx/
+/android
 
 .env
